</repository>
```

==<hr/>==

h3. Version 0.9 (NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.9-SNAPSHOT</version>
</dependency>
```

* Removed all "Blueprints":http://blueprints.tinkerpop.com graph related dependencies
* Renamed @UniquePathFilterPipe@ to @CyclicPathFilterPipe@
* Renamed numerous methods in @FluentPipeline@ to make DSL construction more concise
* Updated @LoopPipe@ to support emit functionality

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-cleaner-pipe.png!

h3. Version 0.8 (Cleaner -- September 18, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.8</version>
</dependency>
```

* @SideEffectPipe@ now has signature of @<S,T>@ instead of @<S,E,T>@
* @GroupCountFunctionPipe@ has signature of @<S,K>@ to denote the key of its @Map<K,Number>@ side-effect
* Removed @ComparisonFilterPipe@ as it is confusing and now @PipeHelper@ has comparison support
* Added @PipeHelper.makePipeString()@ to have a single point where all pipe @toString()@s are created
* Optimized @PipeHelper.counter()@ and @PipeHelper.fillCollection()@ by respecting architecture of @AbstractPipe@
* Added @PipeHelper.iterate()@ to complete drain an iterator
* Added @FluentPipeline@ as a utility class for fluently constructing a pipeline
* Added @RetainFilterPipe@, added @ExceptFilterPipe@, and abstracted @CollectionFilterPipe@
* Added @EdgesPipe@, added @VerticesPipe@, and abstracted @GraphElementPipe@
* Renamed @AggregatorPipe@ to @AggregatePipe@
* @AndFilterPipe@ and @OrFilterPipe@ will automatically wrap provided pipes in a @HasNextPipe@
* Generalized @GroupCountPipe@ to have a value of @Map<Object,Number>@ instead of @Long@
* Migrated @TablePipe@ and @Table@ from Gremlin
* Simplified the semantics of @HasNextPipe@ (use @Pipe.hasNext()@ to accomplish previous behavior)